solc_mutator_ossfuzz_seed_corpus/test_sol/test_a21003f1b552a1dcaebb431750a8795feb86c66314f842a3ab2d0bb6c96e1963_e71c280a3007e5c157e7d1a80fd8c17eb77c74ff_sol.sol
==== Source:  ====

==== Source: su0.sol ====
function f0()     returns(uint96 o0,string memory o1,uint216 o2)
{
}
library L0 {
  modifier m0(uint184 i0) 
  {
    _;
  }
  address payable public constant cons0 = payable(0x0000000000000000000000000000000000000000);
  function f1() external    returns(address o0)
  {
    while (true)
    {
    }
    for(    address l0 = address(0x0000000000000000000000000000000000000007);
true;
address(0x0000000000000000000000000000000000000003))
    {
      continue;
    }
    for(    uint128 l1 = (((uint128(340282366920938463463374607431768211455) << uint232(uint232(1246505981037573291714454267402188696055329664409188930060779682432519))) & uint128(340282366920938463463374607431768211455)) * uint128(19912389675848005388122258250654001885));
;
)
    {
      continue;
      for(      int40 l2 = (int40(-195295165742) * (~((int40(260481341978) * int40(0)))));
false;
)
      {
        (uint96 l3, string memory l4, uint216 l5) = f0();
      }
      break;
    }
  }
  modifier m1() 
  {
    assembly
    {
      if cons0
      {
      }
      let al0 := cons0
      al0 := al0
      let al1 := 0
    }
    _;
  }
  enum EN0 {
    M0, M1, M2, M3, M4, M5, M6, M7,
    M8, M9, M10, M11, M12, M13, M14, M15,
    M16, M17, M18, M19, M20, M21, M22, M23,
    M24, M25, M26, M27, M28, M29, M30, M31,
    M32, M33, M34, M35, M36, M37, M38, M39,
    M40, M41, M42, M43, M44, M45, M46, M47,
    M48, M49, M50, M51, M52, M53, M54, M55,
    M56, M57, M58, M59, M60, M61, M62, M63,
    M64, M65, M66, M67, M68, M69, M70, M71,
    M72, M73, M74, M75, M76, M77, M78, M79,
    M80, M81, M82, M83, M84, M85, M86, M87

  }
  function f2() external  m1() m0(((uint184(24519928653854221733733552434404946937899825954937634815) | (uint184(24519928653854221733733552434404946937899825954937634815) ^ (uint184(7697782844951572397672774754634805405377648943402964192) - uint184(3789014700052066983031285604072857122893867280838728231)))) * uint184(0)))  returns(bool o0)
  {
  }
  event ev0(L0.EN0 indexed ep0, bytes19 indexed ep1, address indexed ep2);
  error er0(function (address, uint136[] memory, function (uint184) external  [1] memory) external   returns (bytes25, address payable) ep0);
}
pragma solidity >= 0.0.0;
// ----
// Warning 3149: (su0.sol:493-633): The result type of the shift operation is equal to the type of the first operand (uint128) ignoring the (larger) type of the second operand (uint232) which might be unexpected. Silence this warning by either converting the first or the second operand to the type of the other.
// TypeError 7615: (su0.sol:1011-1016): Only direct number constants and references to such constants are supported by inline assembly.
// TypeError 7615: (su0.sol:1050-1055): Only direct number constants and references to such constants are supported by inline assembly.
